...
          );
        }}
      />
      <TouchableOpacity
        activeOpacity={0.7}
        style={buttonStyles.circle}
        testID="AddPostButton"
        onPress={() => {
          props.navigation.push('Home', {
            screen: 'AddPost',
          });
        }}>
        <IoniconsIcon name="add" size={55} color={light} />
...
